src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Institution__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Institution__c</columns>
        <columns>Duration__c</columns>
        <columns>Frequency__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FutureSkills_Queue_Course</fullName>
        <filterScope>Queue</filterScope>
        <label>FutureSkills Queue</label>
        <queue>FutureSkills_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>